--- a/public_html/index.html
+++ b/public_html/index.html
@@ -88,6 +88,17 @@
           <p>
             <a href="http://localhost:9867/scripts/basic.sh">A shell script</a>
           </p>
+          <p>
+            <form method="post" action="/scripts/perl_env">
+                <button type="submit">A perl script</button>
+            </form>
+        </p>
+        <p>
+            <form method="post" action="/scripts/basic.sh">
+                <button type="submit">A shell script</button>
+            </form>
+        </p> 
+
         </div>
         <!-- /.col-lg-4 -->
       </div>
